--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "core-js": "^3.8.3",
+    "firebase": "^12.6.0",
     "vue": "^3.2.13",
     "vue-router": "^4.6.3",
     "vuex": "^4.0.2"
@@ -34,7 +36,7 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {"no-mixed-spaces-and-tabs": 0}
   },
   "browserslist": [
     "> 1%",
